# Functionator

./: CMakeLists.txt  build.sh  main.cpp  makefile
src/: CMakeLists.txt  main.cpp
src/Application/: Application.cpp  Application.hpp  ArgsHelper.hpp  CMakeLists.txt  IApplication.hpp  TestApp.hpp
src/Application/private/: Application.cpp  ArgsHelper.cpp  TestApp.cpp
src/Functionator/: CMakeLists.txt  Functionator.cpp  Functionator.hpp
src/Functionator/Actions/: ActionSum.cpp  ActionSum.hpp  IAction.hpp
src/Functionator/Nodes/: BinOperNode.cpp  BinOperNode.hpp  IFuncNode.hpp
src/Functionator/Parser/: FunctionParser.cpp  FunctionParser.hpp
src/Functionator/private/: Functionator.cpp
src/Functionator/private/SyntaxTree/: ExpressionParser.cpp  ExpressionParser.hpp
src/Functionator/private/SyntaxTree/Nodes/: BinaryOperationNode.cpp  BinaryOperationNode.hpp  ISyntaxNode.hpp  SyntaxBaseNode.cpp  SyntaxBaseNode.hpp  UnaryOperationNode.cpp  UnaryOperationNode.hpp  ValueNode.cpp  ValueNode.hpp
src/Functionator/private/test/: test.cpp  test.hpp
